# ALICE-ETHZ-AREMA

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Data Input - BM.csv  DataInput_Pro.csv  Makefile  README.md  database.dbml  dataformats.dbml  dataformats.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose_ref.yml  package-lock.json  package.json  pnpm-lock.yaml  professionals.md
backend/: .gitignore  .npmrc  .prettierrc  Dockerfile  Makefile  alembic.ini  knexfile.ts  package-lock.json  package.json  pyproject.toml  readme.md  start.sh
backend/api/: auth.py  config.py  db.py  main.py  rate_limit.py
backend/config/: custom-environment-variables.json  default.json
backend/helpers/: helper-seed.ts
backend/lib/: app.js  app.js.map  authentication.js  authentication.js.map  client.d.ts  client.js  client.js.map  declarations.d.ts  postgresql.d.ts  postgresql.js  postgresql.js.map
backend/migrations/: 20230904083939_user.ts  20230904120308_natural-resource.ts  20230904120418_building-element.ts  20230904120429_building-material.ts  20230904120443_professional.ts  20230904120455_professional-type.ts  20230904120504_technical-construction.ts  20230904124617_natural-resource.ts  20230905075119_building.ts  20230905091257_building-professional.ts  20230911081121_building-professional-new-field.ts  20230911085514_building-professional-new-idfield.ts  20230925084413_professional-area-delivery.ts  20230926130557_professional-type.ts  20231108093212_professional-area-delivery.ts  20231113165212_building-coordinates.ts  20231116105212_physical_properties.ts  20231116161257_building-professional-element.ts  20240708160800_physical_properties2.ts  20240710122314_building_material.ts  20240710131444_building-material-natural-resource.ts  20240711130305_technical-construction-building-material.ts  20240711150903_build-element.ts  env.py
backend/public/: backend-0.0.0.tgz  index.html
backend/seeds/: 00_admin_user.ts  01_users.ts  02_natural-resource.ts  03_building.ts  04_professional-type.ts  04_professional.ts  05_building-professional.ts  (+3 more)
(+685 files in other folders)
