[project]
name = "arema-api"
version = "0.1.0"
description = ""
authors = [
    {name = "ymarcon", email = "yannick.marcon@epfl.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.4",
    "enacit4r-files",
    "enacit4r-auth",
    "enacit4r-sql",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.6.1",
    "dynaconf>=3.2.6",
    "python-multipart>=0.0.17",
    "python-dotenv[cli]>=1.0.1",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0.2",
    "elasticsearch[async]>=8.16.0,<9",
    "markdown-it-py>=3.0.0",
    "titiler-core==0.22.0",
    "jinja2>=3.1.6",
    "slowapi>=0.1.9",
    "markdownify>=1.2.2",
    "beautifulsoup4>=4.14.3",
]

[tool.uv.sources]
enacit4r-files = {git = "https://github.com/EPFL-ENAC/enacit4r-files", rev = "1.0.0"}
enacit4r-auth = {git = "https://github.com/EPFL-ENAC/enacit4r-auth", rev = "0.6.1"}
enacit4r-sql = {git = "https://github.com/EPFL-ENAC/enacit4r-sql", rev = "0.4.1"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
include = ["api/data/*.yaml"]
